[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://character/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://character/enemies/NormalEnemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://character/enemies/ShootingEnemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://character/enemies/DiverEnemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://World.gd" type="Script" id=6]
[ext_resource path="res://character/enemies/EnemySpawner.gd" type="Script" id=7]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/bg_music.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/star_texture.png" type="Texture" id=10]
[ext_resource path="res://effects/Explosion.tscn" type="PackedScene" id=11]

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 0, 270, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -1000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 327.5, 55.5 )

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )

[node name="Stars" type="Particles2D" parent="."]
position = Vector2( 280, 0 )
rotation = 4.71239
lifetime = 1.5
preprocess = 3.0
process_material = SubResource( 2 )
texture = ExtResource( 10 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 260, 851 )

[node name="EnemySpawner" type="Node2D" parent="."]
position = Vector2( 0, -116 )
script = ExtResource( 7 )
enemies = [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ) ]

[node name="SpawnPositions" type="Node2D" parent="EnemySpawner"]

[node name="SpawnPosition_01" type="Position2D" parent="EnemySpawner/SpawnPositions"]
position = Vector2( 70, 0 )

[node name="SpawnPosition_02" type="Position2D" parent="EnemySpawner/SpawnPositions"]
position = Vector2( 170, 0 )

[node name="SpawnPosition_03" type="Position2D" parent="EnemySpawner/SpawnPositions"]
position = Vector2( 270, 0 )

[node name="SpawnPosition_04" type="Position2D" parent="EnemySpawner/SpawnPositions"]
position = Vector2( 370, 0 )

[node name="SpawnPosition_05" type="Position2D" parent="EnemySpawner/SpawnPositions"]
position = Vector2( 470, 0 )

[node name="SpawnTimer" type="Timer" parent="EnemySpawner"]
autostart = true

[node name="DeadZone" type="Area2D" parent="."]
position = Vector2( 0, -186 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZone"]
position = Vector2( 273.5, -45.5 )
shape = SubResource( 1 )

[node name="DeadZone2" type="Area2D" parent="."]
position = Vector2( 0, 1100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZone2"]
position = Vector2( 273.5, -45.5 )
shape = SubResource( 1 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
autoplay = true

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource( 8 )]

[node name="EffectsLayer" type="Node2D" parent="."]

[node name="Explosion" parent="EffectsLayer" instance=ExtResource( 11 )]

[connection signal="player_died" from="Player" to="." method="_on_Player_player_died"]
[connection signal="player_took_damage" from="Player" to="." method="_on_Player_player_took_damage"]
[connection signal="spawn_laser" from="Player" to="." method="_on_Player_spawn_laser"]
[connection signal="spawn_enemy" from="EnemySpawner" to="." method="_on_EnemySpawner_spawn_enemy"]
[connection signal="timeout" from="EnemySpawner/SpawnTimer" to="EnemySpawner" method="_on_SpawnTimer_timeout"]
[connection signal="area_entered" from="DeadZone" to="." method="_on_DeadZone_area_entered"]
[connection signal="area_entered" from="DeadZone2" to="." method="_on_DeadZone_area_entered"]
